<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f9f1f0"
>




        <TextView
            android:id="@+id/tv_tituloInspiracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:text="@string/tituloBuscandoInspiracion"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_lecturalia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFAEAE"
            android:text="@string/botonLecturalia"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_GoodreadsInspiracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFAEAE"
            android:text="@string/botonGoodReads"
            android:textColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="410dp"
                android:layout_height="222dp"
                app:layout_constraintBottom_toTopOf="@+id/bt_volverInspiracion"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/book" />

            <Button
                android:id="@+id/bt_volverInspiracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#FFAEAE"
                android:text="@string/botonVolver"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>





</LinearLayout>